--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>This is the title this is where the title goes</title>
+  <title>Cheeki's Archive</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-gray-100 font-sans">
   <header class="p-6 bg-gray-800 shadow-md">
-    <h1 class="text-3xl font-bold">This is a description I guess</h1>
-    <p class="text-gray-400">This is actually the real description</p>
+    <h1 class="text-3xl font-bold">Cheeki's Archive</h1>
+    <p class="text-gray-400">S.T.A.L.K.E.R. Mods Backup Database</p>
   </header>
 
   <main class="p-6">
@@ -43,7 +43,7 @@
           modList.appendChild(modCard);
         });
       } catch (e) {
-        document.getElementById('mod-list').innerHTML = '<p class="text-red-400">Failed to load mods.json. If running locally, use a local server.</p>';
+        document.getElementById('mod-list').innerHTML = '<p class="text-red-400">Failed to load mods.json</p>';
       }
     }
 
