--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <header class="p-6 bg-gray-800 shadow-md">
     <h1 class="text-3xl font-bold">Project Archive</h1>
     <p class="text-gray-400">A simple collection of useful resources.</p>
+    <p class="text-gray-400 mt-2">
+      This website provides an organized archive of various projects, including videos and links for easy access.
+      Everything listed here is preserved for reference and posterity.
+    </p>
   </header>
 
   <main class="p-6">
