--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               </div>` : ''}
 
             <div>
-              ${item.links.map(link => `<a href="${link.url}" target="_blank" class="text-blue-400 hover:underline mr-2">${link.label}</a>`).join('')}
+              ${item.links.map(link => `<div><a href="${link.url}" target="_blank" class="text-blue-400 hover:underline">${link.label}</a></div>`).join('')}
             </div>
           `;
           itemList.appendChild(itemCard);
