--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <title>Project Archive</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
-    .star {
-      font-size: 1.2rem;
+    .star svg {
+      width: 1.2rem;
+      height: 1.2rem;
+      display: inline-block;
     }
   </style>
 </head>
@@ -33,14 +35,35 @@
 
   <script>
     function renderStars(rating) {
+      const fullStar = `
+        <span class="star text-yellow-400">
+          <svg fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.286 3.967a1 1 0 00.95.69h4.178c.969 0 1.371 1.24.588 1.81l-3.385 2.46a1 1 0 00-.364 1.118l1.287 3.966c.3.921-.755 1.688-1.538 1.118l-3.385-2.46a1 1 0 00-1.175 0l-3.385 2.46c-.783.57-1.838-.197-1.538-1.118l1.287-3.966a1 1 0 00-.364-1.118L2.045 9.394c-.783-.57-.38-1.81.588-1.81h4.178a1 1 0 00.95-.69l1.286-3.967z"/></svg>
+        </span>`;
+      const halfStar = `
+        <span class="star text-yellow-400">
+          <svg viewBox="0 0 20 20">
+            <defs>
+              <linearGradient id="halfGrad">
+                <stop offset="50%" stop-color="currentColor"/>
+                <stop offset="50%" stop-color="transparent"/>
+              </linearGradient>
+            </defs>
+            <path fill="url(#halfGrad)" d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.286 3.967a1 1 0 00.95.69h4.178c.969 0 1.371 1.24.588 1.81l-3.385 2.46a1 1 0 00-.364 1.118l1.287 3.966c.3.921-.755 1.688-1.538 1.118l-3.385-2.46a1 1 0 00-1.175 0l-3.385 2.46c-.783.57-1.838-.197-1.538-1.118l1.287-3.966a1 1 0 00-.364-1.118L2.045 9.394c-.783-.57-.38-1.81.588-1.81h4.178a1 1 0 00.95-.69l1.286-3.967z"/>
+          </svg>
+        </span>`;
+      const emptyStar = `
+        <span class="star text-gray-600">
+          <svg fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.286 3.967a1 1 0 00.95.69h4.178c.969 0 1.371 1.24.588 1.81l-3.385 2.46a1 1 0 00-.364 1.118l1.287 3.966c.3.921-.755 1.688-1.538 1.118l-3.385-2.46a1 1 0 00-1.175 0l-3.385 2.46c-.783.57-1.838-.197-1.538-1.118l1.287-3.966a1 1 0 00-.364-1.118L2.045 9.394c-.783-.57-.38-1.81.588-1.81h4.178a1 1 0 00.95-.69l1.286-3.967z"/></svg>
+        </span>`;
+
       const stars = [];
       for (let i = 1; i <= 5; i++) {
         if (rating >= i) {
-          stars.push('<span class="text-yellow-400 star">&#9733;</span>'); // full star ★
+          stars.push(fullStar);
         } else if (rating >= i - 0.5) {
-          stars.push('<span class="text-yellow-400 star">&#x2BEA;</span>'); // using Unicode left half black star ⯪
+          stars.push(halfStar);
         } else {
-          stars.push('<span class="text-gray-600 star">&#9733;</span>'); // empty star in gray ★
+          stars.push(emptyStar);
         }
       }
       return stars.join('');
@@ -60,7 +83,7 @@
           itemCard.innerHTML = `
             <div class="flex justify-between items-center mb-1">
               <h2 class="text-xl font-bold">${item.name}</h2>
-              <div>${renderStars(item.rating || 0)}</div>
+              <div class="flex">${renderStars(item.rating || 0)}</div>
             </div>
             <p class="mb-2">${item.description}</p>
 
