--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2 class="text-lg text-gray-400 mb-3">A simple collection of useful resources.</h2>
     <p class="text-gray-300 text-sm mb-6">This website serves as a long-term archive of various resources and files. Each entry includes download links, guides, and videos when available.</p>
     
-    <div id="mod-list" class="grid gap-4"></div>
+    <div id="mod-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4"></div>
   </div>
 
   <script>
