--- a/index.html
+++ b/index.html
@@ -4,17 +4,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Project Archive</title>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-900 text-white font-sans p-4">
-  <div class="max-w-4xl mx-auto">
-    <h1 class="text-3xl font-bold mb-1">Project Archive</h1>
-    <h2 class="text-lg text-gray-400 mb-3">A simple collection of useful resources.</h2>
-    <p class="text-gray-300 text-sm mb-6">This website serves as a long-term archive of various resources and files. Each entry includes download links, guides, and videos when available.</p>
-    
-    <div id="mod-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4"></div>
-  </div>
+<body class="bg-gray-900 text-gray-100 font-sans">
+  <header class="p-6 bg-gray-800 shadow-md">
+    <h1 class="text-3xl font-bold">Project Archive</h1>
+    <p class="text-gray-400">A simple collection of useful resources.</p>
+    <p class="text-gray-400 mt-2">
+      This website provides an organized archive of various projects, including videos and links for easy access.
+      Everything listed here is preserved for reference and posterity.
+    </p>
+  </header>
+
+  <main class="p-6">
+    <div id="item-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+      <!-- Items will be loaded here -->
+    </div>
+  </main>
+
+  <footer class="p-6 text-center text-gray-500 text-sm">
+    © 2025 Archive. All rights reserved.
+  </footer>
 
   <script>
     async function loadMods() {
