--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           titleRow.appendChild(rating);
 
           const desc = document.createElement('p');
-          desc.className = 'text-gray-400 mb-1 text-sm text-justify';
+          desc.className = 'text-gray-400 mb-1 text-sm';
           desc.textContent = mod.description;
 
           const links = document.createElement('div');
