--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Project Archive</title>
+  <title>Cheeki's Mods Archive</title>
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-white font-sans p-4">
   <div class="max-w-6xl mx-auto">
-    <h1 class="text-3xl font-bold mb-1">Project Archive</h1>
-    <h2 class="text-lg text-gray-400 mb-3">A simple collection of useful resources.</h2>
+    <h1 class="text-3xl font-bold mb-1">Cheeki's Mods Archive</h1>
+    <h2 class="text-lg text-gray-400 mb-3">A collection of S.T.A.L.K.E.R. Story Mods</h2>
     <p class="text-gray-300 text-sm mb-6">
       This website serves as a long-term archive of various resources and files. Each entry includes download links, guides, and videos when available.
     </p>
