--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 class="text-3xl font-bold mb-1">Cheeki's Mods Archive</h1>
     <h2 class="text-lg text-gray-400 mb-3">A collection of S.T.A.L.K.E.R. Story Mods</h2>
     <p class="text-gray-300 text-sm mb-6">
-      This website serves as a long-term archive of various resources and files. Each entry includes download links, guides, and videos when available.
+      A long-term archive of various game modifications for the S.T.A.L.K.E.R. games franchise. Everything listed here is for ease-of-access and posterity. All credits go to the Authors of these mods.
     </p>
     
     <!-- Responsive Grid -->
