--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <!-- Footer -->
   <footer class="mt-8 text-center text-sm text-gray-500">
-    © 2025 Cheeki's Mods Archive. <a href="https://your-link-here.com" target="_blank" class="text-blue-400 hover:underline">Your Link Here</a>
+    Cheeki's Mods Archive 2025 - <a href="https://linktr.ee/cheekibreekii" target="_blank" class="text-blue-400 hover:underline">Check me Out!</a>
   </footer>
 
   <script>
