--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     <div id="mod-list" class="grid gap-4 grid-cols-[repeat(auto-fit,minmax(250px,1fr))] mb-8"></div>
 
     <!-- Footer -->
-    <footer class="text-center text-gray-500 text-xs mt-8 border-t border-gray-700 pt-4">
-      &copy; 2025 Cheeki. All rights reserved. 
-      <a href="https://yourwebsite.com" target="_blank" class="text-blue-400 hover:underline ml-1">Visit Website</a>
-    </footer>
+    <footer class="mt-8 text-center text-sm text-gray-500">
+    Cheeki's Mods Archive 2025 - <a href="https://linktr.ee/cheekibreekii" target="_blank" class="text-blue-400 hover:underline">Check me Out!</a>
+  </footer>
   </div>
 
   <!-- Modal Popup -->
