--- a/guides/mod-alpha.html
+++ b/guides/mod-alpha.html
@@ -1,18 +1,52 @@
-<!-- Example Guide: mod-alpha.html -->
-<h2 class="text-xl font-bold mb-2">Mod Alpha - Installation Guide</h2>
-<p class="mb-2">
-  Follow these steps to install Mod Alpha:
-</p>
-<ol class="list-decimal list-inside mb-4 space-y-1">
-  <li>Download the mod archive from the link provided.</li>
-  <li>Extract it using WinRAR or 7-Zip.</li>
-  <li>Copy the extracted files into your S.T.A.L.K.E.R. game directory.</li>
-  <li>Overwrite existing files if prompted.</li>
-  <li>Launch the game and enjoy.</li>
-</ol>
-<p class="mb-2">
-  <strong>Important:</strong> This mod is only compatible with version 1.0006.
-</p>
-<p>
-  <a href="https://example.com/more-info" target="_blank" class="text-blue-400 hover:underline">Click here for more details or troubleshooting</a>
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MOD TITLE</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="bg-gray-900 text-white font-sans p-6">
+  <div class="max-w-3xl mx-auto bg-gray-800 p-6 rounded-lg shadow-lg">
+    <!-- Title -->
+    <h1 class="text-2xl font-bold mb-4 border-b border-gray-600 pb-2">MOD TITLE</h1>
+
+    <!-- Installation Guide -->
+    <h2 class="text-xl font-semibold mb-2">Installation Guide</h2>
+    <ul class="list-disc list-inside text-gray-300 mb-6 space-y-1">
+      <li>Step 1: Download all files.</li>
+      <li>Step 2: Extract to game directory.</li>
+      <li>Step 3: Apply patches if needed.</li>
+      <li>Step 4: Launch using provided launcher.</li>
+      <li>Step 5: Check mod settings for tweaks.</li>
+    </ul>
+    <hr class="border-gray-600 mb-6">
+
+    <!-- Links -->
+    <h2 class="text-xl font-semibold mb-2">Links</h2>
+    <ul class="list-disc list-inside text-blue-400 mb-6 space-y-1">
+      <li><a href="https://moddb.com" target="_blank" class="hover:underline">Moddb Original Page</a></li>
+      <li><a href="https://ap-pro.net" target="_blank" class="hover:underline">Ap-pro Original Page</a></li>
+      <li><a href="https://translation.com" target="_blank" class="hover:underline">Translation Original Page</a></li>
+    </ul>
+    <hr class="border-gray-600 mb-6">
+
+    <!-- Credits -->
+    <h2 class="text-xl font-semibold mb-2">Credits</h2>
+    <h3 class="font-semibold text-gray-200">Mod Creators:</h3>
+    <ul class="list-disc list-inside text-gray-300 mb-4 space-y-1">
+      <li><a href="https://creator1.com" target="_blank" class="text-blue-400 hover:underline">Creator Name</a></li>
+    </ul>
+
+    <h3 class="font-semibold text-gray-200">Translation:</h3>
+    <ul class="list-disc list-inside text-gray-300 mb-4 space-y-1">
+      <li><a href="https://translator.com" target="_blank" class="text-blue-400 hover:underline">Translator Name</a></li>
+    </ul>
+
+    <h3 class="font-semibold text-gray-200">Additional Credits:</h3>
+    <ul class="list-disc list-inside text-gray-300 mb-4 space-y-1">
+      <li><a href="https://additional.com" target="_blank" class="text-blue-400 hover:underline">Tester Name</a></li>
+    </ul>
+  </div>
+</body>
+</html>
