--- a/guides/mod-alpha.html
+++ b/guides/mod-alpha.html
@@ -22,30 +22,47 @@
     </ul>
     <hr class="border-gray-600 mb-6">
 
-    <!-- Links -->
+    <!-- Links Section -->
     <h2 class="text-xl font-semibold mb-2">Links</h2>
-    <ul class="list-disc list-inside text-blue-400 mb-6 space-y-1">
-      <li><a href="https://moddb.com" target="_blank" class="hover:underline">Moddb Original Page</a></li>
-      <li><a href="https://ap-pro.net" target="_blank" class="hover:underline">Ap-pro Original Page</a></li>
-      <li><a href="https://translation.com" target="_blank" class="hover:underline">Translation Original Page</a></li>
-    </ul>
+    <p class="text-gray-300 mb-1">
+      Moddb Original Page: 
+      <a href="https://moddb.com" target="_blank" class="text-blue-400 hover:underline">https://moddb.com</a>
+    </p>
+    <p class="text-gray-300 mb-1">
+      Ap-pro Original Page: 
+      <a href="https://ap-pro.net" target="_blank" class="text-blue-400 hover:underline">https://ap-pro.net</a>
+    </p>
+    <p class="text-gray-300 mb-6">
+      Translation Original Page: 
+      <a href="https://translation.com" target="_blank" class="text-blue-400 hover:underline">https://translation.com</a>
+    </p>
     <hr class="border-gray-600 mb-6">
 
-    <!-- Credits -->
+    <!-- Credits Section -->
     <h2 class="text-xl font-semibold mb-2">Credits</h2>
+
     <h3 class="font-semibold text-gray-200">Mod Creators:</h3>
     <ul class="list-disc list-inside text-gray-300 mb-4 space-y-1">
-      <li><a href="https://creator1.com" target="_blank" class="text-blue-400 hover:underline">Creator Name</a></li>
+      <li>
+        Creator Name: 
+        <a href="https://creator1.com" target="_blank" class="text-blue-400 hover:underline">https://creator1.com</a>
+      </li>
     </ul>
 
     <h3 class="font-semibold text-gray-200">Translation:</h3>
     <ul class="list-disc list-inside text-gray-300 mb-4 space-y-1">
-      <li><a href="https://translator.com" target="_blank" class="text-blue-400 hover:underline">Translator Name</a></li>
+      <li>
+        Translator Name: 
+        <a href="https://translator.com" target="_blank" class="text-blue-400 hover:underline">https://translator.com</a>
+      </li>
     </ul>
 
     <h3 class="font-semibold text-gray-200">Additional Credits:</h3>
     <ul class="list-disc list-inside text-gray-300 mb-4 space-y-1">
-      <li><a href="https://additional.com" target="_blank" class="text-blue-400 hover:underline">Tester Name</a></li>
+      <li>
+        Tester Name: 
+        <a href="https://additional.com" target="_blank" class="text-blue-400 hover:underline">https://additional.com</a>
+      </li>
     </ul>
   </div>
 </body>
