--- a/guides/mod-alpha.html
+++ b/guides/mod-alpha.html
@@ -41,29 +41,23 @@
     <!-- Credits Section -->
     <h2 class="text-xl font-semibold mb-2">Credits</h2>
 
-    <h3 class="font-semibold text-gray-200">Mod Creators:</h3>
-    <ul class="list-disc list-inside text-gray-300 mb-4 space-y-1">
-      <li>
-        Creator Name: 
-        <a href="https://creator1.com" target="_blank" class="text-blue-400 hover:underline">https://creator1.com</a>
-      </li>
-    </ul>
+    <h3 class="font-semibold text-gray-200 mb-1">Mod Creators:</h3>
+    <p class="text-gray-300 mb-2">
+      Creator Name: 
+      <a href="https://creator1.com" target="_blank" class="text-blue-400 hover:underline">https://creator1.com</a>
+    </p>
 
-    <h3 class="font-semibold text-gray-200">Translation:</h3>
-    <ul class="list-disc list-inside text-gray-300 mb-4 space-y-1">
-      <li>
-        Translator Name: 
-        <a href="https://translator.com" target="_blank" class="text-blue-400 hover:underline">https://translator.com</a>
-      </li>
-    </ul>
+    <h3 class="font-semibold text-gray-200 mb-1">Translation:</h3>
+    <p class="text-gray-300 mb-2">
+      Translator Name: 
+      <a href="https://translator.com" target="_blank" class="text-blue-400 hover:underline">https://translator.com</a>
+    </p>
 
-    <h3 class="font-semibold text-gray-200">Additional Credits:</h3>
-    <ul class="list-disc list-inside text-gray-300 mb-4 space-y-1">
-      <li>
-        Tester Name: 
-        <a href="https://additional.com" target="_blank" class="text-blue-400 hover:underline">https://additional.com</a>
-      </li>
-    </ul>
+    <h3 class="font-semibold text-gray-200 mb-1">Additional Credits:</h3>
+    <p class="text-gray-300 mb-2">
+      Tester Name: 
+      <a href="https://additional.com" target="_blank" class="text-blue-400 hover:underline">https://additional.com</a>
+    </p>
   </div>
 </body>
 </html>
