--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Footer -->
     <footer class="mt-8 text-center text-sm text-gray-500">
-    Cheeki's Mods Archive 2025 - <a href="https://linktr.ee/cheekibreekii" target="_blank" class="text-blue-400 hover:underline">Check me Out!</a>
+    Cheeki's Mods Archive - vibe coding since 2025 - <a href="https://linktr.ee/cheekibreekii" target="_blank" class="text-blue-400 hover:underline">Check me Out!</a>
   </footer>
   </div>
 
