--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p class="text-gray-300 text-sm mb-6">
       A non-exhaustive archive of game modifications for the S.T.A.L.K.E.R. game franchise, mainly story-focused mods I reviewed on the YouTube Channel.
       Everything listed here is for ease-of-access and posterity only. Consolidating files that tend to be scattered across multiple websites, hosting services, with some unfortunately lost already. 
-      All credits go to the Authors of these mods.
+      All credits go to the authors and creators of these mods.
     </p>
 
     <!-- Responsive Grid -->
