--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cheeki's Mods Archive</title>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-white font-sans p-4">
@@ -12,91 +13,84 @@
     <h2 class="text-lg text-gray-400 mb-3">A collection of S.T.A.L.K.E.R. Story Mods</h2>
     <p class="text-gray-300 text-sm mb-6">
       A non-exhaustive archive of game modifications for the S.T.A.L.K.E.R. game franchise, mainly story-focused mods I reviewed on the YouTube Channel.
-      Everything listed here is for ease-of-access and posterity only. Consolidating files that tend to be scattered across multiple websites, hosting services, with some unfortunately lost already. 
-      All credits go to the authors and creators of these mods.
+      Everything listed here is for ease-of-access and posterity only. Consolidating files that tend to be scattered accross multiple websites, hosting services, with some unfortunately lost already. 
+      All credits go to the Authors of these mods.
     </p>
 
-    <!-- Responsive Grid -->
-    <div id="mod-list" class="grid gap-4 grid-cols-[repeat(auto-fit,minmax(250px,1fr))] mb-8"></div>
+    <!-- Sort Button -->
+    <button id="sort-button" class="mb-4 bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-1 px-3 rounded">
+      Sort by Rating
+    </button>
 
-    <!-- Footer -->
-    <footer class="mt-8 text-center text-sm text-gray-500">
-    Cheeki's Mods Archive - <a href="https://linktr.ee/cheekibreekii" target="_blank" class="text-blue-400 hover:underline">Check me Out!</a>
-  </footer>
-  </div>
-
-  <!-- Modal Popup -->
-  <div id="modal-overlay" class="fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center hidden z-50">
-    <div id="modal-content" class="bg-gray-800 text-white p-6 rounded-lg max-w-2xl w-full relative overflow-y-auto max-h-[80vh]">
-      <button id="modal-close" class="absolute top-2 right-2 text-gray-400 hover:text-white text-xl">&times;</button>
-      <div id="modal-body" class="text-sm text-gray-200">Loading...</div>
-    </div>
+    <!-- Mod List -->
+    <div id="mod-list" class="grid gap-4 grid-cols-[repeat(auto-fit,minmax(250px,1fr))]"></div>
   </div>
 
   <script>
+    let mods = [];
+
     async function loadMods() {
       try {
-        const response = await fetch('mods.json?v=' + Date.now());
-        const mods = await response.json();
-        const container = document.getElementById('mod-list');
-
-        mods.forEach(mod => {
-          const card = document.createElement('div');
-          card.className = 'bg-gray-800 p-3 rounded-md shadow-sm flex flex-col h-full';
-
-          const titleRow = document.createElement('div');
-          titleRow.className = 'flex justify-between items-center mb-1';
-
-          const title = document.createElement('h3');
-          title.className = 'text-lg font-semibold';
-          title.textContent = mod.title;
-
-          const rating = document.createElement('div');
-          rating.className = 'flex items-center space-x-0.5 text-yellow-400';
-          const stars = renderStars(mod.rating || 0);
-          rating.innerHTML = stars;
-
-          titleRow.appendChild(title);
-          titleRow.appendChild(rating);
-
-          const desc = document.createElement('p');
-          desc.className = 'text-gray-400 mb-1 text-sm';
-          desc.textContent = mod.description;
-
-          const links = document.createElement('div');
-          links.className = 'mb-2';
-          (mod.links || []).forEach(link => {
-            const a = document.createElement('a');
-            a.href = link.url;
-            a.textContent = link.label;
-            a.className = 'block text-blue-400 hover:underline text-sm cursor-pointer';
-            a.target = '_blank';
-
-            if (link.label.toLowerCase().includes('install guide')) {
-              a.removeAttribute('href');
-              a.addEventListener('click', () => openModal(link.url));
-            }
-
-            links.appendChild(a);
-          });
-
-          const video = document.createElement('iframe');
-          video.src = mod.video;
-          video.className = 'w-full h-40 mt-auto rounded';
-          video.allow = 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture';
-          video.allowFullscreen = true;
-
-          card.appendChild(titleRow);
-          card.appendChild(desc);
-          card.appendChild(links);
-          if (mod.video) {
-            card.appendChild(video);
-          }
-          container.appendChild(card);
-        });
+        const response = await fetch('mods.json?v=' + Date.now()); // cache-busting
+        mods = await response.json();
+        renderMods(mods);
       } catch (err) {
         console.error('Error loading mods.json:', err);
       }
+    }
+
+    function renderMods(modArray) {
+      const container = document.getElementById('mod-list');
+      container.innerHTML = '';
+
+      modArray.forEach(mod => {
+        const card = document.createElement('div');
+        card.className = 'bg-gray-800 p-3 rounded-md shadow-sm flex flex-col h-full';
+
+        const titleRow = document.createElement('div');
+        titleRow.className = 'flex justify-between items-center mb-1';
+
+        const title = document.createElement('h3');
+        title.className = 'text-lg font-semibold';
+        title.textContent = mod.title;
+
+        const rating = document.createElement('div');
+        rating.className = 'flex items-center space-x-0.5 text-yellow-400';
+        const stars = renderStars(mod.rating || 0);
+        rating.innerHTML = stars;
+
+        titleRow.appendChild(title);
+        titleRow.appendChild(rating);
+
+        const desc = document.createElement('p');
+        desc.className = 'text-gray-400 mb-1 text-sm';
+        desc.textContent = mod.description;
+
+        const links = document.createElement('div');
+        links.className = 'mb-2';
+        (mod.links || []).forEach(link => {
+          const a = document.createElement('a');
+          a.href = link.url;
+          a.textContent = link.label;
+          a.className = 'block text-blue-400 hover:underline text-sm';
+          a.target = '_blank';
+          links.appendChild(a);
+        });
+
+        const video = document.createElement('iframe');
+        video.src = mod.video;
+        video.className = 'w-full h-40 mt-auto rounded';
+        video.allow = 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture';
+        video.allowFullscreen = true;
+
+        card.appendChild(titleRow);
+        card.appendChild(desc);
+        card.appendChild(links);
+        if (mod.video) {
+          card.appendChild(video);
+        }
+        container.appendChild(card);
+      });
     }
 
     function renderStars(rating) {
@@ -126,40 +120,10 @@
       return stars;
     }
 
-    function openModal(url) {
-      const overlay = document.getElementById('modal-overlay');
-      const body = document.getElementById('modal-body');
-      const closeBtn = document.getElementById('modal-close');
-
-      body.innerHTML = 'Loading...';
-      overlay.classList.remove('hidden');
-
-      fetch(url)
-        .then(res => {
-          if (!res.ok) throw new Error('Failed to load content');
-          return res.text();
-        })
-        .then(data => {
-          body.innerHTML = data;
-        })
-        .catch(err => {
-          body.innerHTML = '<p class="text-red-400">Failed to load content.</p>';
-          console.error(err);
-        });
-
-      function closeModal() {
-        overlay.classList.add('hidden');
-        overlay.removeEventListener('click', onClickOutside);
-        closeBtn.removeEventListener('click', closeModal);
-      }
-
-      function onClickOutside(e) {
-        if (e.target === overlay) closeModal();
-      }
-
-      overlay.addEventListener('click', onClickOutside);
-      closeBtn.addEventListener('click', closeModal);
-    }
+    document.getElementById('sort-button').addEventListener('click', () => {
+      const sortedMods = [...mods].sort((a, b) => (b.rating || 0) - (a.rating || 0));
+      renderMods(sortedMods);
+    });
 
     loadMods();
   </script>
